--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">REPOSITORIO del Departamento de Asistencia Tecnica y Mantenimiento del CRODE de Orizaba
+          <h2 class="text-white mb-4">CRODE de Orizaba</h2>
+          <p class="text-white-50">El Centro Regional de Optimización y Desarrollo de Equipo (C.R.O.D.E.) de Orizaba, es creado en el año de 1993, dependiente de la Secretaría de Educación Pública, de la Subsecretaría de Educación e Investigación Tecnológicas (SEIT) actualmente Subsecretaría de Educación Superior, así como de la Dirección General de Institutos Tecnológicos (DGIT) ahora DGEST Establecido en el parque industrial Valle de Orizaba (PIVO), el CRODE fue creado con la finalidad de diseñar y producir equipos didácticos que satisfagan las necesidades de equipamiento de los talleres y laboratorios de los Institutos que conforman el Sistema Nacional de Educación Superior Tecnológica; así como de proporcionar Asistencia Técnica mediante el mantenimiento a instalaciones, equipos y capacitación. El área de influencia abarca a 21 institutos distribuidos en los estados de Veracruz, Oaxaca, Puebla, Michoacán, Hidalgo, Estado de México, Ciudad de México, Guerrero, Morelos y Tlaxcala. Desde su creación a la fecha se cuenta con un catálogo de 139 equipos diferentes, de gran impacto tecnológico en las diversas áreas del conocimiento. 
             <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. </p>
         </div>
       </div>
