--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4>Proceso anterior en el departamento de Asistencia Tecnica y Mantenimiento/h4>
+            <p class="text-black-50 mb-0">Se muestra El proceso que seguía el departamento y los responsables de las actividades</p>
           </div>
         </div>
       </div>
